# wordle

./: .pre-commit-config.yaml  README.md  pyproject.toml  wordle.py
src/: game_logic.py  letter_state.py  words.py
