[project]
name = "wordle"
version = "0.1.0"
description = "Personal Wordle game"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]

# ruff configuration
[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"
